--- a/simulateur/frontend/package.json
+++ b/simulateur/frontend/package.json
@@ -7,8 +7,8 @@
     "@coconut-xr/xinteraction": "^0.1.12",
     "@react-three/drei": "^9.96.1",
     "@react-three/postprocessing": "^2.16.0",
-    "@react-three/uikit": "workspace:^",
-    "@react-three/uikit-lucide": "workspace:^",
+    "@react-three/uikit": "^0.1.0",
+    "@react-three/uikit-lucide": "^0.1.0",
     "r3f-perf": "^7.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
